--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.93.1",
     "canvas-confetti": "^1.9.4",
+    "framer-motion": "^12.29.2",
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
   },
